archive/v1-components/microk8s/kubernetes/executor-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spark-executor
  labels:
    app: spark-executor
spec:
  containers:
  - name: spark-kubernetes-executor
    volumeMounts:
    - name: spark-config
      mountPath: /spark/conf/spark-defaults.conf
      subPath: spark-defaults.conf
  volumes:
  - name: spark-config
    configMap:
      name: spark-config
