archive/v1-components/microk8s/kubernetes/airflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      containers:
      - name: airflow-webserver
        image: apache/airflow:2.7.1
        args: ["webserver"]
        resources:
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: dags
          mountPath: /opt/airflow/dags
      - name: minio-sync
        image: minio/mc
        command: ["/bin/sh", "-c"]
        args:
        - |
          mc alias set myminio http://minio:9000 minioadmin minioadmin;
          while true; do
            mc mirror --overwrite myminio/dags /opt/airflow/dags;
            sleep 60;
          done
        volumeMounts:
        - name: dags
          mountPath: /opt/airflow/dags
      volumes:
      - name: dags
        emptyDir: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      containers:
      - name: airflow-scheduler
        image: apache/airflow:2.7.1
        args: ["scheduler"]
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        volumeMounts:
        - name: dags
          mountPath: /opt/airflow/dags
      - name: minio-sync
        image: minio/mc
        command: ["/bin/sh", "-c"]
        args:
        - |
          mc alias set myminio http://minio:9000 minioadmin minioadmin;
          while true; do
            mc mirror --overwrite myminio/dags /opt/airflow/dags;
            sleep 60;
          done
        volumeMounts:
        - name: dags
          mountPath: /opt/airflow/dags
      volumes:
      - name: dags
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
  namespace: default
spec:
  # type: LoadBalancer
  ports:
  - port: 8080 # Standard HTTP
    targetPort: 8080
    name: web
  selector:
    app: airflow-webserver
